@@ -1,6 +1,11 @@
 2019-09-08 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/pdk/gen.c:
+	  Transition proposed idxsp to proposed mov variant.
+
+2019-09-08 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/pdk/gen.c:
 	  Disable use of proposed instructions by default.
 
 2019-09-08 Philipp Klaus Krause <pkk AT spth.de>
